--- a/style.css
+++ b/style.css
@@ -7,30 +7,63 @@ header {
   padding: 20px;
 }
 
-nav {
-  display: flex;
-  align-items: center;
-}
-
-.hamburger-menu {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+.menu-icon {
+  display: block;
+  position: relative;
   width: 30px;
   height: 22px;
   cursor: pointer;
 }
 
-.hamburger-menu span {
-  width: 100%;
+.menu-icon span {
+  display: block;
+  position: absolute;
   height: 2px;
+  width: 100%;
   background-color: white;
   border-radius: 2px;
   transition: all 0.3s ease-in-out;
 }
 
-.hamburger-menu span:first-child {
-  transform-origin: top left;
+.menu-icon span:nth-child(1) {
+  top: 0;
+}
+
+.menu-icon span:nth-child(2),
+.menu-icon span:nth-child(3) {
+  top: 10px;
+}
+
+.menu-icon span:nth-child(3) {
+  top: 20px;
+}
+
+#myLinks {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: #333;
+  padding: 20px;
+  box-sizing: border-box;
+  transition: transform 0.3s ease-in-out;
+}
+
+#myLinks a {
+  display: block;
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+#myLinks a:hover {
+  text-decoration: underline;
+}
+
+#myLinks.active {
+  transform: translateY(0%);
 }
 
 .hamburger-menu span:last-child {
